test/fail_compilation/fail63.d

debug (Foo)
	int x;

debug=Foo;
